sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:6: error: not found: value i
    if(pasNain==0 || plusPetit(i-1,i)){
                               ^AlgGnomeSort:6: error: not found: value i
    if(pasNain==0 || plusPetit(i-1,i)){
                                   ^AlgGnomeSort:9: error: not found: value i
      echange(i-1,i)
              ^AlgGnomeSort:9: error: not found: value i
      echange(i-1,i)
                  ^