sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var lgr = getNombreValeurs()
  var pasNain = 0
  while(pasNain != lgr){
    if(pasNain==0 || plusPetit(i-1,i)){
      pasNain = pasNain +1
    }else{
      echange(i-1,i)
      pasNain = pasNain-1
    }
  	} 
}